no double tap to zoom

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ canvas {
   border: solid black;
   background-color: white;
   cursor: crosshair;
+  touch-action: manipulation;
 }
 
 .settings {
