--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ canvas {
   width: 80vmin;
   aspect-ratio: 1 / 1;
   border: solid black;
-  background-color: white;
+  background-color: black;
   cursor: crosshair;
   touch-action: manipulation;
 }
