test hold canvas on ios safari

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
   font-family: "Lucida Sans","Lucida Sans Regular","Lucida Grande","Lucida Sans Unicode",Geneva,Verdana,sans-serif;
 
+  color: "pink"; /*to display update temp*/
+
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
